--- a/Ui.Desktop/MainWindow.xaml
+++ b/Ui.Desktop/MainWindow.xaml
@@ -1,23 +1,14 @@
-﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop"
-        xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui;assembly=Logic.Ui"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop" xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui;assembly=Logic.Ui" mc:Ignorable="d" Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
-        <Binding Source="{StaticResource ViewModelLocator}" Path="TheMainWindowViewModel">
-        </Binding>
+        <Binding Source="{StaticResource ViewModelLocator}" Path="TheMainWindowViewModel"></Binding>
     </Window.DataContext>
     <Window.IsEnabled>
         <Binding Source="{StaticResource MessageListener}" Path="BindableProperty"></Binding>
     </Window.IsEnabled>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <UniformGrid Grid.Column="0" Rows="4">
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Identifier</Label>
@@ -28,25 +19,12 @@
             <TextBox VerticalAlignment="Center" 
                      Text="{Binding ElementName=myDataGrid, Path=SelectedItem.Name}">
             </TextBox>
-            <Button Command="{Binding RenameValueInModelCommand}">Rename first Item</Button>
+            <!--<Button Command="{Binding RenameValueInModelCommand}">Rename first Item</Button>-->
+            <Button Command="{Binding FillBookListCommand}">Create sample books</Button>
             <Button Command="{Binding OpenNewBookWindowCommand}">Add new book</Button>
             <Button Command="{Binding SaveCommand}">Save</Button>
             <Button Command="{Binding LoadCommand}">Load</Button>
         </UniformGrid>
         <DataGrid Grid.Column="1" Name="myDataGrid" ItemsSource="{Binding Path=MyList}"></DataGrid>
     </Grid>
-    <!--
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Button Content="Fill BookCollection" Grid.Column="0" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="150" Height="150" Command="{Binding FillBookList}"/>
-        <Button Content="Open New Book" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenNewBookWindow}"/>
-        <Button Content="$empty" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" />
-        <Button Content="$empty" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" />
-    </Grid>
-    -->
 </Window>
