--- a/Ui.Desktop/NewBookEntry.xaml
+++ b/Ui.Desktop/NewBookEntry.xaml
@@ -7,7 +7,8 @@
         xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui.ViewModels;assembly=Logic.Ui"
        xmlns:ENUMS="clr-namespace:De.HsFlensburg.ClientApp011.Business.Model.BusinessObjects.ENUM;assembly=Business.Model"
         mc:Ignorable="d"
-        Title="Neues Buch anlegen" Height="450" Width="800">
+        Title="Neues Buch anlegen" Height="450" Width="800"
+        x:Name="NewBookWindow">
     <Window.Resources>
         <!--<viewModels:NewBookViewModel x:Key="NewBookViewModel"></viewModels:NewBookViewModel>-->
         <!--<ObjectDataProvider x:Key="Enums" MethodName="GetValues" ObjectType="{x:Type core:Enum}">
@@ -19,7 +20,7 @@
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="TheNewBookViewModel"></Binding>
     </Window.DataContext>
-    <Grid>
+    <Grid x:Name="NewBookGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -32,32 +33,38 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Center">Neues Buch Anlegen</Label>
-        <UniformGrid Grid.Column="0" Grid.Row="1" Rows="10">
+        <UniformGrid Grid.Column="0" Grid.Row="1" Rows="11">
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Title</Label>
-            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Title}"></TextBox>
+            <TextBox x:Name="Title" VerticalAlignment="Center" Text="{Binding BookVM.Title}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Autor</Label>
-            <ComboBox VerticalAlignment="Center" Text="{Binding BookVM.Author}"></ComboBox>
+            <ComboBox x:Name="Author" VerticalAlignment="Center" 
+                      ItemsSource="{Binding MyBookCollectionVM}"
+                      IsEditable="True" IsTextSearchEnabled="True"
+                      DisplayMemberPath="Author"
+                      SelectedItem="{Binding BookVM.Author}"
+                      Text="{Binding BookVM.Author}"></ComboBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Genre</Label>
-            <ComboBox x:Name="cmbGenre" IsSynchronizedWithCurrentItem="True" 
+            <ComboBox x:Name="cmbGenre" IsSynchronizedWithCurrentItem="True"
+                      IsTextSearchEnabled="True"
                       ItemsSource="{Binding BookVM.GenreValues}"
                       SelectedItem="{Binding BookVM.Genre }"
                       VerticalAlignment="Center"></ComboBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Preisempfehlung</Label>
-            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Price}"></TextBox>
+            <TextBox x:Name="Price" VerticalAlignment="Center" Text="{Binding BookVM.Price, StringFormat='#0.00 €'}" />
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Kurzbeschreibung</Label>
-            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Description}"></TextBox>
+            <TextBox VerticalAlignment="Center"  Text="{Binding BookVM.Description}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Einband</Label>
             <ComboBox VerticalAlignment="Center" IsSynchronizedWithCurrentItem="True" 
                       ItemsSource="{Binding BookVM.FormatValues}"
                       SelectedItem="{Binding BookVM.Format}"></ComboBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Erscheinungsdatum</Label>
-            <DatePicker VerticalAlignment="Center" SelectedDate="{Binding BookVM.ReleaseDate}"></DatePicker>
+            <DatePicker VerticalAlignment="Center" SelectedDate="{Binding BookVM.ReleaseDate}" ></DatePicker>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Verlag</Label>
             <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Publisher}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Seitenzahl</Label>
             <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Pages}"></TextBox>
             <Label VerticalAlignment="Center" HorizontalAlignment="Right">Gewicht</Label>
-            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Weight}"></TextBox>
+            <TextBox VerticalAlignment="Center" Text="{Binding BookVM.Weight, StringFormat={}{0} g}"></TextBox>
         </UniformGrid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -69,13 +76,13 @@
             <Label Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right">Maße</Label>
             <Label Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20">H</Label>
             <TextBox Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40" 
-                     Text="{Binding BookVM.Dimension.Height}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Height, StringFormat='#0 mm'}"></TextBox>
             <Label Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20">B</Label>
             <TextBox Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"
-                     Text="{Binding BookVM.Dimension.Width}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Width, StringFormat='#0 mm'}"></TextBox>
             <Label Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20">T</Label>
             <TextBox Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"
-                     Text="{Binding BookVM.Dimension.Depth}"></TextBox>
+                     Text="{Binding BookVM.Dimension.Depth, StringFormat={}{0}mm}"></TextBox>
         </Grid>
         <UniformGrid Grid.Column="1" Grid.Row="1" Rows="5">
             <Label VerticalAlignment="Top" HorizontalAlignment="Right">ISBN</Label>
@@ -93,13 +100,14 @@
             <CheckBox VerticalAlignment="Center" IsChecked="{Binding BookVM.Bestseller}"></CheckBox>
         </UniformGrid>
         <UniformGrid Grid.Column="1" Grid.Row="2" Grid.RowSpan="2">
-            <Button>Buchcover hochladen</Button>
+            <Button Command="{Binding OpenFileDialog}">Buchcover hochladen</Button>
             <Image Height="75" Source="{Binding BookVM.BindableCoverImage}"></Image>
         </UniformGrid>
         <UniformGrid Grid.Column="0" Grid.Row="3">
             <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="200" Height="40"
-                    Command="{Binding AddBook}">Save</Button>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" Height="40">Cancle</Button>
+                    Command="{Binding AddBook}" CommandParameter="{Binding ElementName=NewBookGrid}">Save</Button>
+            <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="200" Height="40"
+                    Command="{Binding CloseWindow}" CommandParameter="{Binding ElementName=NewBookWindow}">Cancle</Button>
         </UniformGrid>
     </Grid>
 </Window>
